Bug 401370 - Discover sometimes freezes for ~0.5 sec when refreshing/pulling down multiple times 'Checking for updates' page
Summary: Discover sometimes freezes for ~0.5 sec when refreshing/pulling down multiple...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 5.14.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-24 17:38 UTC by Alexander Mentyu
Modified: 2018-12-19 17:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-11-24 17:38:37 UTC
STEPS TO REPRODUCE
1. Launch Discover.
2. Select bottom left Checking for updates.../No Updates page.
3. Click mouse button and pull down this page or press 'Check for Updates' button in order to begin update process.
4. Without waiting for the current update process to finish - pull down the page again - Discover window becomes unresponsive.
5. Click on Discover window.

OBSERVED RESULT
Discover crashes

EXPECTED RESULT
Updates page cannot be pulled down upon update checking/process in progress

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-39-generic

ADDITIONAL INFORMATION
Reproduciblity: Very often
Comment 1 Aleix Pol 2018-11-25 01:25:52 UTC
Can you please provide a backtrace?
Comment 2 Alexander Mentyu 2018-12-06 20:41:29 UTC
It's freezing only for about 0.5 sec sometimes currently.

Possible solution:
1. 'Checking for updates..' text cannot be pulled down again.
2. 'Already checking for updates' popup message appears.
Comment 3 Aleix Pol 2018-12-13 04:04:54 UTC
Then it's not crashing?
Comment 4 Alexander Mentyu 2018-12-13 10:54:44 UTC
It's currently sluggish on responding for some drag downs and sometimes freezes for ~half a second - but not crashes
Comment 5 Aleix Pol 2018-12-19 17:39:54 UTC
Git commit 6f1bf941066cd8e40480feddb0c0462d0615e147 by Aleix Pol.
Committed on 19/12/2018 at 17:39.
Pushed by apol into branch 'master'.

pk: don't offer launching the SDK package

Could probably find a more generic way to fix it, will wait until we get more use-cases.

M  +11   -1    libdiscover/backends/PackageKitBackend/AppPackageKitResource.cpp
M  +1    -1    libdiscover/backends/PackageKitBackend/AppPackageKitResource.h

https://commits.kde.org/discover/6f1bf941066cd8e40480feddb0c0462d0615e147