pk: don't offer launching the SDK package

Could probably find a more generic way to fix it, will wait until we get more use-cases.

BUG: 401370